force-app/package/core/objects/Schema_Mapping__c/Schema_Mapping__c.object-meta.xml
<CustomObject>
    <label>Schema Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>