force-app/package/core/objects/Schema_Mapping__c/fields/Hierarchy_Changed__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When mapped objects are added / removed the hierarchy requires an update</inlineHelpText>
    <label>Hierarchy Changed?</label>
    <type>Checkbox</type>
</CustomField>