force-app/package/core/objects/Schema_Mapping__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <label>Instruction</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>