force-app/package/core/objects/Schema_Mapping__c/fields/Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Version</label>
    <referenceTo>Schema_Mapping_Version__c</referenceTo>
    <relationshipLabel>Schema Mappings</relationshipLabel>
    <relationshipName>Schema_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>