force-app/package/core/objects/Schema_Mapping__c/fields/Number_of_Mapped_sObjects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mapped_sObjects__c</fullName>
    <label>Number of Mapped sObjects</label>
    <summaryForeignKey>Mapped_sObject__c.Schema_Mapping__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>