force-app/package/core/objects/Schema_Mapping__c/fields/Schema_Changed__c.field-meta.xml
<CustomField>
    <fullName>Schema_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This box is checked when a mapped sObject or field has changed and the schema requires a new version.</description>
    <inlineHelpText>This box is checked when a mapped sObject or field has changed and the schema requires a new version.</inlineHelpText>
    <label>Schema Changed</label>
    <type>Checkbox</type>
</CustomField>