force-app/package/core/objects/Schema_Mapping__c/fields/Schema_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Schema_Instruction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The related schema instructions</inlineHelpText>
    <label>Schema Instruction</label>
    <referenceTo>Schema_Instruction__c</referenceTo>
    <relationshipLabel>Schema Mappings</relationshipLabel>
    <relationshipName>Schema_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>