force-app/package/core/objects/Schema_Mapping__c/fields/val_Has_sObjects__c.field-meta.xml
<CustomField>
    <fullName>val_Has_sObjects__c</fullName>
    <formula>IF( Number_of_Mapped_sObjects__c &gt; 0,&apos;✅&apos;,&apos;⛔&apos;)</formula>
    <label>01) Has sObjects</label>
    <type>Text</type>
</CustomField>