force-app/package/core/objects/Schema_Mapping__c/fields/val_Has_Versions__c.field-meta.xml
<CustomField>
    <fullName>val_Has_Versions__c</fullName>
    <formula>IF( Number_of_Versions__c &gt; 0, &apos;✅&apos;,&apos;⛔&apos;)</formula>
    <label>02) Has Versions</label>
    <type>Text</type>
</CustomField>