force-app/package/core/objects/Schema_Mapping__c/fields/val_Hierarchy_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>val_Hierarchy_Up_to_Date__c</fullName>
    <formula>IF( Hierarchy_Changed__c,&apos;⛔&apos;,&apos;✅&apos; )</formula>
    <label>03) Hierarchy Up to Date?</label>
    <type>Text</type>
</CustomField>