force-app/package/core/objects/Schema_Mapping__c/fields/val_Schema_Version_Up_To_Date__c.field-meta.xml
<CustomField>
    <fullName>val_Schema_Version_Up_To_Date__c</fullName>
    <formula>IF( Schema_Changed__c,&apos;⛔&apos;,&apos;✅&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>04) Schema Version Up To Date?</label>
    <type>Text</type>
</CustomField>